--- a/.github/workflows/test-recipes.yml
+++ b/.github/workflows/test-recipes.yml
@@ -11,7 +11,6 @@ on:
       - 'tests/**'
       - '.github/workflows/test-recipes.yml'
   pull_request:
-    branches: [ main, profiles ]
     paths:
       - 'run-recipe.py'
       - 'run-recipe.sh'
@@ -19,6 +18,7 @@ on:
       - 'recipes/**'
       - 'tests/**'
       - '.github/workflows/test-recipes.yml'
+  workflow_dispatch:
 
 jobs:
   test:
