--- a/Dockerfile.mxfp4
+++ b/Dockerfile.mxfp4
@@ -82,7 +82,7 @@ RUN --mount=type=cache,id=uv-cache,target=/root/.cache/uv \
 ARG PRE_TRANSFORMERS=0
 RUN --mount=type=cache,id=uv-cache,target=/root/.cache/uv \
     if [ "$PRE_TRANSFORMERS" = "1" ]; then \
-        uv pip install -U transformers --pre; \
+        uv pip install "transformers[serving] @ git+https://github.com/huggingface/transformers.git@main"; \
     fi
 # =========================================================
 # STAGE 2: Builder
@@ -208,6 +208,7 @@ RUN --mount=type=cache,id=uv-cache,target=/root/.cache/uv \
     if [ "$PRE_TRANSFORMERS" = "1" ]; then \
         sed -i '/^transformers\b/d' requirements/common.txt; \
         sed -i '/^transformers\b/d' requirements/test.txt; \
+        uv pip install "transformers[serving] @ git+https://github.com/huggingface/transformers.git@main"; \
     fi && \
     uv pip install -r requirements/build.txt
 
